fix: cart icon on mobile [#2409]

--- a/assets/css/woocommerce-rtl.css
+++ b/assets/css/woocommerce-rtl.css
@@ -1136,6 +1136,7 @@ section.exclusive .tns-visually-hidden {
 .header-menu-sidebar li.menu-item-nav-cart {
   opacity: 0;
   visibility: hidden;
+  display: none;
 }
 
 .menu-item-nav-cart {
