--- a/assets/css/woocommerce.css
+++ b/assets/css/woocommerce.css
@@ -1138,6 +1138,7 @@ section.exclusive .tns-visually-hidden {
 .header-menu-sidebar li.menu-item-nav-cart {
   opacity: 0;
   visibility: hidden;
+  display: none;
 }
 
 .menu-item-nav-cart {
