--- a/assets/scss/woocommerce/_nav-cart.scss
+++ b/assets/scss/woocommerce/_nav-cart.scss
@@ -27,6 +27,7 @@
 .header-menu-sidebar li.menu-item-nav-cart {
   opacity: 0;
   visibility: hidden;
+  display: none;
 }
 //</editor-fold>
 
